# whtieNoiseDemo

./: redme
WhiteNoiseToolkit/: .coverage  .gitignore  CODE_QUALITY_REPORT.md  CONTRIBUTING.md  PROJECT_SUMMARY.md  README.md  pyproject.toml  requirements.txt  setup.py
WhiteNoiseToolkit/config/: default.yaml
WhiteNoiseToolkit/docs/tutorials/: 01_basic_analysis.md  02_advanced_analysis.md  03_mea_analysis.md
WhiteNoiseToolkit/examples/: README.md  __init__.py  complete_analysis_demo.py  filter_recovery_demo.py  simple_demo.py
WhiteNoiseToolkit/tests/: __init__.py
WhiteNoiseToolkit/tests/test_core/: test_analysis.py
WhiteNoiseToolkit/tests/test_multi_electrode/: __init__.py  test_multi_electrode.py
WhiteNoiseToolkit/tests/test_synthetic/: test_synthetic_data.py
WhiteNoiseToolkit/tests/test_utils/: test_utils.py
WhiteNoiseToolkit/white_noise_toolkit/: __init__.py
WhiteNoiseToolkit/white_noise_toolkit/core/: __init__.py  design_matrix.py  exceptions.py  filter_extraction.py  nonlinearity_estimation.py  single_cell.py  streaming_analyzer.py
WhiteNoiseToolkit/white_noise_toolkit/examples/: installation_test.py
WhiteNoiseToolkit/white_noise_toolkit/multi_electrode/: __init__.py
WhiteNoiseToolkit/white_noise_toolkit/synthetic/: __init__.py  data_generator.py  validation.py
WhiteNoiseToolkit/white_noise_toolkit/utils/: __init__.py  io_handlers.py  logging_config.py  memory_manager.py  metrics.py  preprocessing.py
